--- a/domovra_dev/app/templates/base.html
+++ b/domovra_dev/app/templates/base.html
@@ -121,7 +121,7 @@
             {% elif seg.startswith('settings') %}Paramètres
             {% elif seg.startswith('journal') %}Journal
             {% elif seg.startswith('support') %}Support
-            {% elif seg.startswith('shopping') %}🚧Liste de courses (En travaux)🚧
+            {% elif seg.startswith('shopping') %}Liste de courses
             {% else %}{{ seg|replace('-', ' ')|capitalize }}{% endif %}
           </h1>
         </div>
